Refactor product module: domain invariants, exception model hardening, and validation robustness (#9)
## Motivation

Strengthen domain consistency and harden the API contract for the product module by:

- introducing explicit domain invariants
- unifying exception semantics
- improving validation robustness
- ensuring stable and predictable error responses

---

## Global exception handling improvements

- Safe handling of mixed field/global validation errors (no unsafe casts)
- Aggregated validation errors (Map<String, List<String>>)
- Standardized error codes (VALIDATION_FAILED, REQUEST_INVALID)
- Structured logging with traceId (PII-safe)
- Added handlers for:
  - MethodArgumentTypeMismatchException
  - HttpMessageNotReadableException (robust cause-chain detection)
  - MissingServletRequestParameterException
  - ConstraintViolationException
  - Optimistic locking conflicts

---

## Domain hardening

- Clear separation between:
  - input validation errors (400)
  - domain invariant violations (500)
- Introduced ProductInvariantViolationException
- Enforced price > 0 invariant in domain layer
- Strengthened ProductReview aggregate consistency
- Added optimistic locking (@Version) to Product and ProductReview

---

## Data integrity & uniqueness

- Deterministic + collision-safe slug generation
- Stable mapping of DB unique constraints to domain exceptions
- Extended repository uniqueness checks for update scenarios

---

## Testing

- Added domain validation tests
- Added slug generation tests
- Added SKU uniqueness tests
- Covered invariant violation scenarios